# services/todo/handler.go
@@ -25,6 +25,8 @@ func NewHandler(svc models.TodoService, s *server.Server) models.TodoHandler {
 	{
 		group.POST("/", handler.AddTodo)
 		group.GET("/", handler.GetAll)
+		group.GET("/:id", handler.GetByID)
+		group.DELETE("/:id", handler.DeleteTodo)
 	}
 
 	return handler
@@ -72,5 +74,57 @@ func (h *handler) AddTodo(ctx *gin.Context) {
 // @Security			Bearer Authenticate
 func (h *handler) GetAll(ctx *gin.Context) {
 	result := h.service.GetAll(ctx)
+	ctx.JSON(result.Status, result)
+}
+
+// GetByID is handler for get one todo http request.
+//
+// @BasePath			/api/v1/todo
+// @Summary				get one todo
+// @Description			get one todo with specified info and Account ID
+// @Tags				todos
+// @Accept				json
+// @Produce				json
+//
+// @Success				200			{object}	todo.BaseResult{result=models.TodoEntity}	"always returns status 200 but body contains error"
+// @Router				/{id}		[get]
+// @Security			Bearer Authenticate
+func (h *handler) GetByID(ctx *gin.Context) {
+	id, err := server.GetPathUint64(ctx)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, &todo.BaseResult{
+			Errors: []string{"Params Not Supported"},
+		})
+
+		return
+	}
+
+	result := h.service.GetByID(uint(id), ctx)
+	ctx.JSON(result.Status, result)
+}
+
+// DeleteTodo is handler for delete todo http request.
+//
+// @BasePath			/api/v1/todo
+// @Summary				delete todo
+// @Description			delete todo with specified info and Account ID
+// @Tags				todos
+// @Accept				json
+// @Produce				json
+//
+// @Success				200			{object}	todo.BaseResult{result=string}	"always returns status 200 but body contains error"
+// @Router				/{id}		[delete]
+// @Security			Bearer Authenticate
+func (h *handler) DeleteTodo(ctx *gin.Context) {
+	id, err := server.GetPathUint64(ctx)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, &todo.BaseResult{
+			Errors: []string{"Params Not Supported"},
+		})
+
+		return
+	}
+
+	result := h.service.DeleteTodo(uint(id), ctx)
 	ctx.JSON(result.Status, result)
 }
